Fixed blurry tile problem and tileset indexing

--- a/client/src/components/Editors/css/editor.css
+++ b/client/src/components/Editors/css/editor.css
@@ -48,6 +48,7 @@
     border-style: solid;
     border-width: 5px;
     border-color: black;
+    image-rendering: pixelated;
 }
 
 .brush_selections_container {
@@ -140,6 +141,11 @@
 .palette_option {
     width: 50px;
     height: 50px;
+    image-rendering: pixelated;
+}
+
+.tile {
+    image-rendering: pixelated;
 }
 
 .tile_option {
